# social-hierarchies

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: .task_paper.py  refs.bib  social_hierarchies.tex  social_hierarchies_pres.tex  task_paper.py
src/social_hierarchies/: __init__.py  task_parameters.py
src/social_hierarchies/analysis/: task_analysis.py
src/social_hierarchies/data_management/: __init__.py  task_data_management.py
src/social_hierarchies/dynamics/: graph.py  markov_chain.py  probabilities.py  task_dynamics.py
src/social_hierarchies/final/: __init__.py  plot.py  task_final.py
src/social_hierarchies/game/: game.py  task_game.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
