[metadata]
name = social_hierarchies
description = Social Hierarchies with Strategic Ability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecdogaroglu/social_hierarchies
author = Ege Can Dogaroglu
author_email = ecdogaroglu@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/ecdogaroglu/social_hierarchies
    Documentation = https://github.com/ecdogaroglu/social_hierarchies
    Github = https://github.com/ecdogaroglu/social_hierarchies
    Tracker = https://github.com/ecdogaroglu/social_hierarchies/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/social_hierarchies/_version.py
